--- a/contact.html
+++ b/contact.html
@@ -9,15 +9,24 @@
         <link rel="stylesheet" href="assets/css/style.css"/>
     </head>
     <body background="assets/images/background.png">
-            <nav class="navbar" id="header">
-                <h1>Jen Pirrone</h1>
-                
-                    <ul class="nav justify-content-end">
-                        <li class="nav-item"><a class="nav-link" href="index.html">About</a></li>
-                        <li class="nav-item"><a class="nav-link" href="portfolio.html">Portfolio</a></li>
-                        <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-                    </ul>
-            </nav>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light ">
+                <a class="navbar-brand" ><h1>Jen Pirrone</h1></a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+                  <ul class="navbar-nav ">
+                    <li class="nav-item">
+                      <a class="nav-link" href="index.html">About</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="portfolio.html">Portfolio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contact</a>
+                    </li>
+                </div>
+              </nav>
         <div class="container">
             <div class="row">   
                 <div class="col-md-12">
